objects/LAT_BR_ClientSegmentationParameters__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_AnswerCode__c</fullName>
        <description>Code/weight/value assigned to each of the answers used to create the subchannel key.</description>
        <label>BR Answer Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Answer__c</fullName>
        <description>Segmentation survey answer used to map the LAT_BR_AnswerCode__c</description>
        <label>BR Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_BusinessSize__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resulting Busines Size of the LAT_BR_PeopleCapacity__c question</description>
        <label>BR Business Size</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>19-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Segmentation Parameters (BR Business Size)</relationshipLabel>
        <relationshipName>BR_Client_Segmentation_Parameters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Channel__c</fullName>
        <label>BR Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Off Trade</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_CustomerFlag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Customer Flag</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>06-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Segmentation Parameters (BR Customer Flag)</relationshipLabel>
        <relationshipName>BR_Client_Segmentation_Parameters4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_DataType__c</fullName>
        <description>Used to describe the function/type of the record (is question, is key, etc.). This field is used in the APEX code to identify what kind of record is treating.</description>
        <label>BR Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sub_Channel Code Answer</fullName>
                </value>
                <value>
                    <fullName>Sub_Channel Key</fullName>
                </value>
                <value>
                    <fullName>Sub_Channel Exception</fullName>
                </value>
                <value>
                    <fullName>Sub_Channel Weight</fullName>
                </value>
                <value>
                    <fullName>Profile Weight</fullName>
                </value>
                <value>
                    <fullName>Profile Exception</fullName>
                </value>
                <value>
                    <fullName>Profile Answer</fullName>
                </value>
                <value>
                    <fullName>Business Size</fullName>
                </value>
                <value>
                    <fullName>Segmentation Key</fullName>
                </value>
                <value>
                    <fullName>Code Answer</fullName>
                </value>
                <value>
                    <fullName>Priority Level</fullName>
                </value>
                <value>
                    <fullName>Fiscal Benefit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_FiscalBenefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Fiscal Benefit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>21-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Segmentation Parameters (BR Fiscal Benefit)</relationshipLabel>
        <relationshipName>BR_Client_Segmentation_Parameters5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Key__c</fullName>
        <description>Key compared to the key obtained based on the answers of the segmentation survey (A#B#...)</description>
        <externalId>true</externalId>
        <label>BR Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_PriorityLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Priority Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>20-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Segmentation Parameters (BR Priority Level)</relationshipLabel>
        <relationshipName>BR_Client_Segmentation_Parameters3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Resulting profile of the obtained profile weight calculation</description>
        <label>BR Profile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>18-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Segmentation Parameters</relationshipLabel>
        <relationshipName>BR_Client_Segmentation_Parameters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Question__c</fullName>
        <description>Identifies the API Name of the segmentation survey question used to map the LAT_BR_Answer__c</description>
        <externalId>true</externalId>
        <label>BR Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BR Segment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UDC__c.LAT_MX_FilterKey__c</field>
                <operation>equals</operation>
                <value>03-01-BR</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UDC__c</referenceTo>
        <relationshipLabel>BR Client Segmentation Parameters (BR Segment)</relationshipLabel>
        <relationshipName>BR_Client_Segmentation_Parameters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_SubChannel__c</fullName>
        <description>Resulting SubChannel of the obtained key</description>
        <label>BR Sub Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atacados</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>C&amp;C</fullName>
                </value>
                <value>
                    <fullName>Canais Alternativos</fullName>
                </value>
                <value>
                    <fullName>Delicatessen</fullName>
                </value>
                <value>
                    <fullName>Distribuidor</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
                <value>
                    <fullName>Night club</fullName>
                </value>
                <value>
                    <fullName>Varejo Regional</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
                <value>
                    <fullName>Specialized Retail</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Table Dance</fullName>
                </value>
                <value>
                    <fullName>Casa Noturna</fullName>
                </value>
                <value>
                    <fullName>Bar Agitado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BR Client Segmentation Parameters</label>
    <listViews>
        <fullName>Off_Trade_All</fullName>
        <columns>NAME</columns>
        <columns>LAT_BR_DataType__c</columns>
        <columns>LAT_BR_Key__c</columns>
        <columns>LAT_BR_AnswerCode__c</columns>
        <columns>LAT_BR_BusinessSize__c</columns>
        <columns>LAT_BR_Profile__c</columns>
        <columns>LAT_BR_Answer__c</columns>
        <columns>LAT_BR_Question__c</columns>
        <columns>LAT_BR_SubChannel__c</columns>
        <columns>LAT_BR_Channel__c</columns>
        <columns>LAT_BR_CustomerFlag__c</columns>
        <columns>LAT_BR_FiscalBenefit__c</columns>
        <columns>LAT_BR_PriorityLevel__c</columns>
        <columns>LAT_BR_Segment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_BR_ClientSegmentationParameters__c.LAT_BR_CSP_OffTrade</value>
        </filters>
        <label>Off Trade - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Off_Trade_PREMIUM</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>LAT_BR_DataType__c</columns>
        <columns>LAT_BR_Key__c</columns>
        <columns>LAT_BR_AnswerCode__c</columns>
        <columns>LAT_BR_BusinessSize__c</columns>
        <columns>LAT_BR_Profile__c</columns>
        <columns>LAT_BR_Question__c</columns>
        <columns>LAT_BR_SubChannel__c</columns>
        <columns>LAT_BR_Channel__c</columns>
        <columns>LAT_BR_CustomerFlag__c</columns>
        <columns>LAT_BR_FiscalBenefit__c</columns>
        <columns>LAT_BR_PriorityLevel__c</columns>
        <columns>LAT_BR_Segment__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_BR_ClientSegmentationParameters__c.LAT_BR_CSP_OffTrade</value>
        </filters>
        <filters>
            <field>LAT_BR_Key__c</field>
            <operation>startsWith</operation>
            <value>A1</value>
        </filters>
        <filters>
            <field>LAT_BR_Key__c</field>
            <operation>startsWith</operation>
            <value>A3</value>
        </filters>
        <label>Off Trade - PREMIUM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Off_Trade_Trajano</fullName>
        <columns>NAME</columns>
        <columns>LAT_BR_DataType__c</columns>
        <columns>LAT_BR_Question__c</columns>
        <columns>LAT_BR_Answer__c</columns>
        <columns>LAT_BR_AnswerCode__c</columns>
        <columns>LAT_BR_CustomerFlag__c</columns>
        <columns>LAT_BR_Key__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAT_BR_PriorityLevel__c</columns>
        <columns>LAT_BR_Channel__c</columns>
        <columns>LAT_BR_SubChannel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_BR_ClientSegmentationParameters__c.LAT_BR_CSP_OffTrade</value>
        </filters>
        <filters>
            <field>LAT_BR_Key__c</field>
            <operation>contains</operation>
            <value>A3H1I1J3L1</value>
        </filters>
        <label>Off Trade - Trajano</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>On_Trade_All</fullName>
        <columns>NAME</columns>
        <columns>LAT_BR_DataType__c</columns>
        <columns>LAT_BR_Key__c</columns>
        <columns>LAT_BR_Question__c</columns>
        <columns>LAT_BR_Answer__c</columns>
        <columns>LAT_BR_AnswerCode__c</columns>
        <columns>LAT_BR_SubChannel__c</columns>
        <columns>LAT_BR_Profile__c</columns>
        <columns>LAT_BR_BusinessSize__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_BR_ClientSegmentationParameters__c.LAT_BR_CSP_OnTrade</value>
        </filters>
        <label>On Trade - All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PS-{0}</displayFormat>
        <label>BR Client Segmentation Parameters Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BR Client Segmentation Parameters</pluralLabel>
    <recordTypes>
        <fullName>LAT_BR_CSP_OffTrade</fullName>
        <active>true</active>
        <label>BR Off Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_CSP_OnTrade</fullName>
        <active>true</active>
        <label>BR On Trade</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>